respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Workcell__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factory__c</fullName>
        <label>Factory Line</label>
        <referenceTo>NEU_Factory__c</referenceTo>
        <relationshipLabel>Workcells</relationshipLabel>
        <relationshipName>Workcells</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Pct_Capacity__c</fullName>
        <formula>Total_Pending_Units__c  /  Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Pending Units&quot; / &quot;Capacity&quot;</inlineHelpText>
        <label>% Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Unit__c</fullName>
        <label>Production Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Units__c</fullName>
        <label>Total Pending Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Workcell</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workcell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workcells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>